--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "author": "edson",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^22.5.4",
+    "@types/sinon": "^17.0.3",
+    "sinon": "^18.0.1",
     "tsx": "^4.19.0",
-    "typescript": "^5.6.2",
-    "@types/node": "^22.5.4"
-  },
-  "dependencies": {}
+    "typescript": "^5.6.2"
+  }
 }
